[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/cyborge01.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.59258, 16.9279 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.80696, 5.75318 )

[sub_resource type="CircleShape2D" id=3]
radius = 42.4729

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -17.3956 )

[node name="leftArea" type="Area2D" parent="."]
position = Vector2( -15, -22 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftArea"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="rightArea" type="Area2D" parent="."]
position = Vector2( 15, -22 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightArea"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Interactable" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
shape = SubResource( 3 )
[connection signal="body_entered" from="leftArea" to="." method="_on_leftArea_body_entered"]
[connection signal="body_exited" from="leftArea" to="." method="_on_leftArea_body_exited"]
[connection signal="body_entered" from="rightArea" to="." method="_on_rightArea_body_entered"]
[connection signal="body_exited" from="rightArea" to="." method="_on_rightArea_body_exited"]
[connection signal="body_entered" from="Interactable" to="." method="_on_Interactable_body_entered"]
[connection signal="body_exited" from="Interactable" to="." method="_on_Interactable_body_exited"]
